2012-03-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-37
	* propagate path renaming to HLTPrescaler instance label

2012-03-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-36
	* add pattern-matching filter to smart renaming
	
2012-03-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-35
	* Improvements in Jython parser.
	* Temporary disable "Import from python" option in the MenuBar. (to deploy the app.)
	
2012-03-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-34
	* Improvements in Jython parser.
	* Problems report dialog after parsing a configuration.

2012-03-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-33
	* Enables the disk caching in the browser by default. (Ulf).

2012-03-24 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-32
	* allow smart renaming to be selectively applied to paths only,
	  sequences only, or modules only (or All!).
	
2012-03-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-31
	* Temporary disable "Import from python" option in the MenuBar. (to deploy the app.)
	* Improvements in Jpython parser.
	- Create nested Pset structures.
	- Take into account the names of the Psets, update pset parameters when they exist, added when needed.
	
2012-03-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-30
	* Update connection setup for Online database. (Andrea).
	* Improvements in Jpython parser.
	- Fix problem with brackets coming from vectors.
	- Create Streams/OutputModules/EventContents based on OutputModules.
	- Create and organise paths in Datasets when possible.
	- Improve console messages.
	
2012-03-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-29
	* Implements Serializable Classes to improve the browser performance. (Ulf)
	* disk cache + statistics for the browser. (Ulf).

2012-03-18 Martin Grunewald  <Martin.Grunewald@cern.ch>